<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name"> Android Articles App Stage 2</string>

    <!-- Default text to show with the newsFeed location -->
    <string name="near_the">Near the</string>

    <!-- Text to display in the list when there are no articles [CHAR LIMIT=NONE] -->
    <string name="no_article">No articles found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">Internet connection is gone</string>

    <!-- Content description text for news image [CHAR LIMIT=100] -->
    <string name="news_image">News image</string>
    <string name="article_date">2018-05-29</string>
    <string name="article_time">14:40:47</string>
    <string name="author">Andrew Sparrow</string>
    <string name="article_title">Gavin Williamson has TV interview terminated after repeatedly avoiding question - Politics live</string>
    <string name="article_section">Politics</string>


    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_item_menu">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Articles Settings</string>

    <!--String for the Preference Labels-->
    <string name="settings_item_per_page_label">Item Per Page (1 – 50)</string>
    <string name="settings_item_per_page">page_size</string>
    <string name="settings_item_per_page_default">50</string>
    <!-- Strings For Topic Category Preference [CHAR LIMIT=30] -->
    <string name="settings_topic_category_label">Topic</string>
    <string name="settings_topic_category">topic_category</string>
    <string name="settings_topic_category_by_default">@string/settings_all_topic_category_value</string>
    settings_menu_item
    <string name="settings_menu_item">Settings</string>

    <!-- Label for All topic category  option [CHAR LIMIT=20] -->
    <string name="settings_all_topic_category_label">All</string>
    <string name="settings_all_topic_category_value">""</string>
    <!-- Label for topic category music option [CHAR LIMIT=20] -->
    <string name="settings_topic_category_music_label">Music</string>
    <string name="settings_topic_category_music_value">music</string>
    <!-- Label for topic category politic option [CHAR LIMIT=20] -->
    <string name="settings_topic_category_politic_label">Politic</string>
    <string name="settings_topic_category_politic_value">politics</string>
    <!-- Label for topic category Football option [CHAR LIMIT=20] -->
    <string name="settings_topic_category_football_label">Football</string>
    <string name="settings_topic_category_football_value">football</string>
    <!-- Label for topic category Sport option [CHAR LIMIT=20] -->
    <string name="settings_topic_category_sport_label">Sport</string>
    <string name="settings_topic_category_sport_value">sport</string>
    <!-- Label for topic category Business option [CHAR LIMIT=20] -->
    <string name="settings_topic_category_business_label">Business</string>
    <string name="settings_topic_category_business_value">business</string>
</resources>
