<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/settings_title">

        <ListPreference
            android:defaultValue="@string/settings_item_per_page_default"
            android:inputType="numberDecimal"
            android:key="@string/settings_item_per_page"
            android:selectAllOnFocus="true"
            android:title="@string/settings_item_per_page_label"



            />

        <EditTextPreference

            android:defaultValue="@string/settings_topic_category_by_default"
            android:entries="@array/settings_order_by_labels"
            android:entryValues="@array/settings_order_by_values"
            android:key="@string/settings_topic_category"
            android:title="@string/settings_topic_category_label" />
            />

    </PreferenceScreen>
